Lighthouse report: fixing contrast ratios

--- a/src/styles/colors.sass
+++ b/src/styles/colors.sass
@@ -1,5 +1,6 @@
 $action: #E69D45 // orange
+$action-font: #cc8329
 $dark: #373f42 // grey
-$light: #F7F4F0 // white-ish
+$light: #fffdfa // #F7F4F0 // white-ish
 $accent1: #308695 // blue
 $accent2: #D45769  // red
