--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -48,7 +48,7 @@ button[type="submit"]:hover
   box-shadow: 0 0 3px 1px colors.$accent1
 
 a, span[role=button]
-  color: colors.$action
+  color: colors.$action-font
   text-decoration: none
   font-weight: fonts.$weight-sans-semi-bold
 
